<resources>
    <string name="app_name">Al-Saffar</string>
    <string name="log_in_to_al_saffar">Log In To Al-Saffar</string>
    <string name="login_welcome_message">Welcome To Al-Saffar. Login to your account to continue using the services of Al-Saffar Mobile Application.</string>
    <string name="register_message">Welcome To Al-Saffar. Register to your account to use the services of Al-Saffar Mobile Application.</string>
    <string name="login">login</string>
    <string name="new_user_create_an_account">New User? Create an Account</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="myemail_email_com">myemail@email.com</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="username_hint">khawer1997</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="first_name_hint">Khawer</string>
    <string name="last_name_hint">Ali</string>
    <string name="khawer1997">khawer1997</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="tab_text_1">Ride</string>
    <string name="tab_text_2">Drive</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ride">Ride</string>
    <string name="drive">Drive</string>
    <string name="title_activity_create_ride">Map</string>
    <string name="register_a_car">Register A Car</string>
    <string name="register_your_car">Register Your Car</string>
    <string name="register_car_message">Ready to earn some money and make friends? Great! Register your car now.</string>
    <string name="toyota">Toyota</string>
    <string name="make">Make</string>
    <string name="corolla">Corolla</string>
    <string name="model">Model</string>
    <string name="grande">Grande</string>
    <string name="year">Year</string>
    <string name="_2018">2018</string>
    <string name="capacity">Capacity</string>
    <string name="your_car_details">Your Car Details</string>
    <string name="view_your_car_details">View Your Car Details</string>
    <string name="view_car_details_message">Your car has been registered in our system. View your car details below.</string>
    <string name="brand">Brand</string>
    <string name="approved">Approved</string>
    <string name="condition">Condition</string>
    <string name="owner_name">Owner Name</string>
    <string name="_4">4</string>
    <string name="yes">Yes</string>
    <string name="delete_my_car">Delete My Car</string>
    <string name="you_profile_details">You Profile Details</string>
    <string name="view_profile_message">We are very glad to see you on Al-Saffar. Feel free to view your profile as saved in our system.</string>
    <string name="full_name">Full Name</string>
    <string name="khawer_ali">Khawer Ali</string>
    <string name="joined_since">Joined Since</string>
    <string name="miles_ridden">Miles Ridden</string>
    <string name="miles_driven">Miles Driven</string>
    <string name="_500_killometers">500 Killometers</string>
    <string name="_240_kilometers">240 Kilometers</string>
    <string name="october_2021">October 2021</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_my_password">Change My Password</string>
</resources>