<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourCarDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_margin"
            android:text="@string/view_your_car_details"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="@dimen/h1_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:text="@string/view_car_details_message"
                android:textAlignment="center" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/owner_name"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_owned_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="Owned By"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/brand"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/toyota"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/model"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/corolla"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/make"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/grande"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/year"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/_2018"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/capacity"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/approved"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_approved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>