<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourCarDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_margin"
            android:text="@string/you_profile_details"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="@dimen/h1_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:text="@string/view_profile_message"
                android:textAlignment="center" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_username_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/full_name"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_full_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/khawer_ali"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/email_address"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/myemail_email_com"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/miles_ridden"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/_240_kilometers"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/miles_driven"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_car_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/_500_killometers"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:text="@string/joined_since"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size" />

            <TextView
                android:id="@+id/out_joined_since"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/october_2021"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="32dp"
                android:text="@string/change_password"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/h2_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="16dp"
                android:text="@string/current_password"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_current_password_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:autofillHints="@null"
                android:background="@color/subtitle_background"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="16dp"
                android:text="@string/new_password"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_new_password_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:autofillHints="@null"
                android:background="@color/subtitle_background"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_new_password"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_confirm_password_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:autofillHints="@null"
                android:background="@color/subtitle_background"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp" />


            <Button
                android:id="@+id/btn_change_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="64dp"
                android:text="@string/change_my_password" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>