<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_margin"
            android:text="@string/create_new_account"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="@dimen/h1_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:text="@string/register_message"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/medium_space_margin"
                android:text="@string/username"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:autofillHints="@null"
                android:background="@color/subtitle_background"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/medium_space_margin"
                android:text="@string/email_address"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_email_address_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:autofillHints="@null"
                android:background="@color/subtitle_background"
                android:ems="10"
                android:hint="@string/myemail_email_com"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/medium_space_margin"
                android:text="@string/password"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:autofillHints="@null"
                android:background="@color/subtitle_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/medium_space_margin"
                android:text="@string/confirm_password"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_confirm_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:autofillHints="@null"
                android:background="@color/subtitle_background"
                android:ems="10"
                android:hint="@string/re_enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp" />


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/medium_space_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:text="@string/signup" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>