<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_margin"
        android:text="@string/log_in_to_al_saffar"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="@dimen/h1_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:text="@string/login_welcome_message"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/medium_space_margin"
            android:text="@string/email_address"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:autofillHints="@null"
            android:background="@color/subtitle_background"
            android:ems="10"
            android:hint="@string/myemail_email_com"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/medium_space_margin"
            android:text="@string/password"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:autofillHints="@null"
            android:background="@color/subtitle_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/medium_space_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:backgroundTint="@color/white"
            android:text="@string/new_user_create_an_account"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="12sp"
            app:rippleColor="@color/black" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>